typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNamesContextualType7_ES5.ts.stderr
error: unimplemented
expand_export_info(T)
File: $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesContextualType7_ES5.ts
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesContextualType7_ES5.ts:9:9
  |
9 | declare function foo<T>(obj: I<T>): T;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(T)
File: $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesContextualType7_ES5.ts
  --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesContextualType7_ES5.ts:10:9
   |
10 | declare function g<T>(obj: J<T>): T;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

